--- a/templates/index.html
+++ b/templates/index.html
@@ -12,16 +12,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- DataTables CSS -->
     <link href="https://cdn.datatables.net/2.0.8/css/dataTables.dataTables.css" rel="stylesheet">
-    <script>
-        function abrirWaze(latitude, longitude) {
-            if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
-                window.location.href = 'waze://?ll=' + latitude + ',' + longitude + '&navigate=yes';
-            } else {
-                window.open('https://waze.com/ul?ll=' + latitude + ',' + longitude + '&navigate=yes', '_blank');
-            }
-        }
-    </script>
+    {% include 'includes/waze.html' %}
 </head>
+
+{% include 'includes/g-analytics.html' %}
 
 <body>
     <div class="container-fluid mt-2">
