--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Cache-control" content="max-age=14400">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Gerenciamento de Registros</title>
+    <title>{{ title }}</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- DataTables CSS -->
